<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PurchaseActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/purchase_total"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="48sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/purchase_select"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_payment_money"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:text="@string/payment_money"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_payment_credit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:text="@string/payment_credit"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_payment_quicpay"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:text="@string/payment_quicpay"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_payment_id"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:text="@string/payment_id"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_payment_ic"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:text="@string/payment_ic"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="2dp"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/payment_cancel"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>